// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createTestRecord 1`] = `
Record {
  "autoIncrement": undefined,
  "createdAt": c {
    "props": {
      "value": 2022-02-01T00:00:00.000Z,
    },
  },
  "createdBy": undefined,
  "createdByProfile": null,
  "displayValues": RecordDisplayValues {
    "props": {},
  },
  "id": RecordId {
    "props": {
      "value": "record",
    },
  },
  "tableId": TableId {
    "props": {
      "value": "tableId",
    },
  },
  "updatedAt": c {
    "props": {
      "value": 2022-02-01T00:00:00.000Z,
    },
  },
  "updatedBy": undefined,
  "updatedByProfile": null,
  "values": RecordValues {
    "props": Map {
      "hello" => StringFieldValue {
        "props": {
          "value": "world",
        },
      },
    },
  },
}
`;

exports[`createTestRecord 2`] = `
Record {
  "autoIncrement": undefined,
  "createdAt": c {
    "props": {
      "value": 2022-02-01T00:00:00.000Z,
    },
  },
  "createdBy": undefined,
  "createdByProfile": null,
  "displayValues": RecordDisplayValues {
    "props": {},
  },
  "id": RecordId {
    "props": {
      "value": "record",
    },
  },
  "tableId": TableId {
    "props": {
      "value": "tableId",
    },
  },
  "updatedAt": c {
    "props": {
      "value": 2022-02-01T00:00:00.000Z,
    },
  },
  "updatedBy": undefined,
  "updatedByProfile": null,
  "values": RecordValues {
    "props": Map {
      "hello" => NumberFieldValue {
        "props": {
          "value": 1,
        },
      },
    },
  },
}
`;

exports[`createTestRecord 3`] = `
Record {
  "autoIncrement": undefined,
  "createdAt": c {
    "props": {
      "value": 2022-02-01T00:00:00.000Z,
    },
  },
  "createdBy": undefined,
  "createdByProfile": null,
  "displayValues": RecordDisplayValues {
    "props": {},
  },
  "id": RecordId {
    "props": {
      "value": "record",
    },
  },
  "tableId": TableId {
    "props": {
      "value": "tableId",
    },
  },
  "updatedAt": c {
    "props": {
      "value": 2022-02-01T00:00:00.000Z,
    },
  },
  "updatedBy": undefined,
  "updatedByProfile": null,
  "values": RecordValues {
    "props": Map {
      "hello" => StringFieldValue {
        "props": {
          "value": "world",
        },
      },
      "number" => NumberFieldValue {
        "props": {
          "value": 1,
        },
      },
    },
  },
}
`;
